--- a/Men.html
+++ b/Men.html
@@ -9,20 +9,29 @@
     <title>Rainy Days | Men</title>
   </head>
   <body>
-    <div class="navbar">
+    <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="Men.html">Men</a>
       <a href="Men.html">Women</a>
       <a href="cart.html">Cart</a>
       <a href="about.html">About us</a>
       <a href="contact.html">Contact</a>
-    </div>
+    </nav>
     <header class="header">
       <a href="Index.html" class="bla">
-        <img src="logo/RainyDays_Logo_bare-fjellet.png" width="250px" />
+        <img
+          src="logo/RainyDays_Logo_bare-fjellet.png"
+          alt="Mountain logo"
+          width="250"
+        />
       </a>
       <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" width="40px" heigth="40px" />
+        <img
+          src="icons/shopping-cart.svg"
+          alt="Shopping icon"
+          width="40px"
+          heigth="40px"
+        />
       </a>
     </header>
     <main>
