--- a/Index.html
+++ b/Index.html
@@ -22,36 +22,23 @@
     </nav>
     <header class="header">
       <a href="Index.html" class="bla">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          alt="Mountain logo"
-          width="250"
-        />
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
       </a>
       <a href="cart.html" class="bla">
-        <img
-          src="icons/shopping-cart.svg"
-          alt="Shopping icon"
-          width="40px"
-          heigth="40px"
-        />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
       </a>
     </header>
     <main>
-      <section>
+      <div>
         <img
           src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
           class="blurred"
           alt="mountain"
-          width="100%"
-          height="500px"
         />
         <img
           src="logo/RainyDays_Logo-hvit.svg"
           class="logo-on-image"
           alt="rainydayslogo"
-          width="100%"
-          height="350px"
         />
         <div class="category-container">
           <div class="category">
@@ -61,17 +48,12 @@
             <a href="Men.html" class="link">Men</a>
           </div>
         </div>
-      </section>
+      </div>
       <section class="new-in">
         <h2>New in</h2>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket1.png"
-              alt="Rainy days 365"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
           </a>
           <div class="product-text">
             <h3>Rainy days 365</h3>
@@ -85,12 +67,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket2.png"
-              alt="Rainy days 265"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" />
           </a>
           <div class="product-text">
             <h3>Rainy days 265</h3>
@@ -103,12 +80,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket3.png"
-              alt="Rainy days 165"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" />
           </a>
           <div class="product-text">
             <h3>Rainy days 165</h3>
@@ -123,12 +95,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -141,12 +108,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -159,12 +121,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -177,12 +134,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -195,12 +147,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -213,12 +160,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -233,14 +175,14 @@
     </main>
     <footer>
       <h3>Contact</h3>
-      <section class="adress">
+      <div class="adress">
         <p>Adress</p>
         <p>5055 Bergen, Danmarksvegen 10</p>
-      </section>
-      <section class="mail-phone">
+      </div>
+      <div class="mail-phone">
         <a href="Phone" class="link">Phone: +47 416 04 683</a>
         <a href="Mail" class="link">Mail: Contact@Rainydays.com</a>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
