--- a/about.html
+++ b/about.html
@@ -29,16 +29,13 @@
         <img
           src="icons/shopping-cart.svg"
           alt="Shopping icon"
-          width="40px"
-          heigth="40px"
+          width="40"
         />
       </a>
     </header>
       <img
         src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
         alt="Name of picture"
-        width="100%"
-        height="500px"
       />
     </section>
     <main>
