--- a/check-out.html
+++ b/check-out.html
@@ -26,12 +26,7 @@
         />
       </a>
       <a href="cart.html" class="bla">
-        <img
-          src="icons/shopping-cart.svg"
-          alt="Shopping icon"
-          width="40px"
-          heigth="40px"
-        />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
       </a>
     </header>
     <main>
