--- a/Men.html
+++ b/Men.html
@@ -19,14 +19,10 @@
     </nav>
     <header class="header">
       <a href="Index.html" class="bla">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          alt="Mountain logo"
-          width="250"
-        />
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
       </a>
       <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
       </a>
     </header>
     <main>
@@ -34,12 +30,7 @@
         <h1>Men</h1>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket1.png"
-              alt="Rainy days 365"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
           </a>
           <h3>Rainy days 365</h3>
           <p>Water ressistant</p>
@@ -51,12 +42,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket2.png"
-              alt="Rainy days 265"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket2.png" alt="Rainy days 265" />
           </a>
           <h3>Rainy days 265</h3>
           <p>Breathable</p>
@@ -67,12 +53,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket3.png"
-              alt="Rainy days 165"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket3.png" alt="Rainy days 165" />
           </a>
           <h3>Rainy days 165</h3>
           <p>Winter</p>
@@ -85,12 +66,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <h3>Rainy days 65</h3>
           <p>Water ressistant</p>
@@ -101,12 +77,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -119,12 +90,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -137,12 +103,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -155,12 +116,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -173,12 +129,7 @@
         </div>
         <div>
           <a>
-            <img
-              src="images/RainyDays_Jacket4.png"
-              alt="Rainy days 65"
-              width="300px"
-              height="300px"
-            />
+            <img src="images/RainyDays_Jacket4.png" alt="Rainy days 65" />
           </a>
           <div class="product-text">
             <h3>Rainy days 65</h3>
@@ -193,12 +144,10 @@
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
