--- a/cart.html
+++ b/cart.html
@@ -19,63 +19,45 @@
     </nav>
     <header class="header">
       <a href="Index.html" class="bla">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          alt="Mountain logo"
-          width="250"
-        />
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
       </a>
       <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
       </a>
     </header>
     <main>
       <h1>Cart</h1>
-      <section>
-        <div class="rainy">
-          <img
-            src="images/RainyDays_Jacket1.png"
-            alt="Rainy days 365"
-            class="image"
-            width="300px"
-            height="300px"
-          />
-          <div class="text">
-            <h3>Rainy days 365</h3>
-            <p>Water ressistant</p>
-            <p>Breathable</p>
-          </div>
+      <div class="rainy">
+        <img src="images/RainyDays_Jacket1.png" alt="Rainy days 365" />
+        <div class="text">
+          <h3>Rainy days 365</h3>
+          <p>Water ressistant</p>
+          <p>Breathable</p>
         </div>
-      </section>
-      <section>
-        <div class="price">
-          <p>Rainy days 365</p>
-          <p>1299 Nok</p>
-        </div>
-        <div class="shipping">
-          <p>Shipping</p>
-          <p>0 Nok</p>
-        </div>
-        <div class="total">
-          <p>Total</p>
-          <p>1299 Nok</p>
-        </div>
-      </section>
-      <section>
-        <div class="buttons">
-          <a href="Check-out.html" class="button">Order now</a>
-          <a href="Index.html" class="button">Continue shopping</a>
-        </div>
-      </section>
+      </div>
+      <div class="price">
+        <p>Rainy days 365</p>
+        <p>1299 Nok</p>
+      </div>
+      <div class="shipping">
+        <p>Shipping</p>
+        <p>0 Nok</p>
+      </div>
+      <div class="total">
+        <p>Total</p>
+        <p>1299 Nok</p>
+      </div>
+      <div class="buttons">
+        <a href="Check-out.html" class="button">Order now</a>
+        <a href="Index.html" class="button">Continue shopping</a>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
