--- a/about.html
+++ b/about.html
@@ -26,18 +26,13 @@
         />
       </a>
       <a href="cart.html" class="bla">
-        <img
-          src="icons/shopping-cart.svg"
-          alt="Shopping icon"
-          width="40"
-        />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
       </a>
     </header>
-      <img
-        src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
-        alt="Name of picture"
-      />
-    </section>
+    <img
+      src="images/gemma-evans-JUrolU3FLTA-unsplash.jpg"
+      alt="Name of picture"
+    />
     <main>
       <h1>About us</h1>
       <p>
@@ -49,12 +44,10 @@
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
