--- a/contact.html
+++ b/contact.html
@@ -35,24 +35,22 @@
         If you have any problems or questions, please contact us and we will
         answer as soon as possible.
       </p>
-      <textinput>
+      <div class="textinput">
         <input type="text" id="Name" name="Name" placeholder="Name" />
         <input type="text" id="Phone-number" placeholder="Phone number" />
         <p>Write your message in the box below</p>
         <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
-      </textinput>
-      <section>
+      </div>
+      <div>
         <a href="sucsess.html" class="cta">Send message</a>
-      </section>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
