--- a/sucsess.html
+++ b/sucsess.html
@@ -31,20 +31,18 @@
     </header>
     <main>
       <h1>sucsess</h1>
-      <section>
+      <div>
         <p>Message sent!</p>
         <p>Your message is sent. We will answer as soon as we can</p>
         <a href="Index.html" class="cta">Back to home</a>
-      </section>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
