--- a/check-out.html
+++ b/check-out.html
@@ -19,30 +19,24 @@
     </nav>
     <header class="header">
       <a href="Index.html" class="bla">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          alt="Mountain logo"
-          width="250"
-        />
+        <img src="logo/RainyDays_Logo_bare-fjellet.png" alt="Mountain logo" />
       </a>
       <a href="cart.html" class="bla">
-        <img src="icons/shopping-cart.svg" alt="Shopping icon" width="40" />
+        <img src="icons/shopping-cart.svg" alt="Shopping icon" />
       </a>
     </header>
     <main>
       <h1>Check out</h1>
-      <section class="cart">
+      <div class="cart">
         <div class="rainy">
           <img
             src="images/RainyDays_Jacket1.png"
             alt="Rainy days 365"
             class="image"
-            width="300px"
-            height="300px"
           />
         </div>
-      </section>
-      <section>
+      </div>
+      <div>
         <div class="price">
           <p>Rainy days 365</p>
           <p>1299 Nok</p>
@@ -55,21 +49,19 @@
           <p>Total</p>
           <p>1299 Nok</p>
         </div>
-      </section>
-      <section>
+      </div>
+      <div>
         <div class="buttons">
           <a href="resipt.html" class="button">Purchase</a>
         </div>
-      </section>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
