--- a/resipt.html
+++ b/resipt.html
@@ -30,8 +30,8 @@
       </a>
     </header>
     <main>
-      <h1>Resipt</h1>
       <section>
+        <h1>Resipt</h1>
         <p>Success!</p>
         <p>Your order is confirmed!</p>
         <p>
@@ -40,18 +40,16 @@
         </p>
         <p>Rainydays@gmail.com</p>
       </section>
-      <section>
+      <div>
         <a href="Index.html" class="cta">Continue shopping</a>
-      </section>
+      </div>
     </main>
     <footer>
       <h3>Contact</h3>
-      <section>
-        <p>Adress</p>
-        <p>5055 Bergen, Danmarksvegen 10</p>
-        <a href="Phone">Phone: +47 416 04 683</a>
-        <a href="Mail">Mail: Contact@Rainydays.com</a>
-      </section>
+      <p>Adress</p>
+      <p>5055 Bergen, Danmarksvegen 10</p>
+      <a href="Phone">Phone: +47 416 04 683</a>
+      <a href="Mail">Mail: Contact@Rainydays.com</a>
     </footer>
   </body>
 </html>
